--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
 
 body {
   font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  color: #33475B;
 }
 
 .container {
@@ -17,18 +19,117 @@ body {
 }
 
 /* REGOLE HEADER */
+
 .header-top {
   height: 70px;
-  /* debug */
-  width: 100%;
-  background-color: red;
+  background-color: rgb(240, 250, 250);
+  border-bottom: 1px solid black;
 }
 
 .header-bot {
   height: 70px;
-  /* debug */
-  width: 100%;
-  background-color: blue;
+  background-color: white;
+}
+
+header .row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* FLOAT LEFT HEADER TOP */
+.header-top .float-left {
+  padding-top: 20px;
+  float: left;
+}
+
+.lingua {
+  background-color: transparent;
+  border: none;
+  margin-right: 20px;
+  color: #33475B;
+}
+
+#contact {
+  padding-left: 20px;
+  border-left: 1px solid black;
+  color: #33475B;
+  text-decoration: none;
+}
+/* FLOAT RIGHT HEADER TOP */
+
+.header-top .float-right {
+  padding-top: 15px;
+  float: right;
+}
+
+.searchbar {
+  display: inline-block;
+}
+.searchtext {
+  height: 30px;
+  visibility: hidden;
+  background-color: transparent;
+  border: none;
+}
+
+.searchbar:hover .searchtext{
+  visibility: visible;
+}
+
+.searchlens {
+  background-color: transparent;
+  border: none;
+  color: #00A4BD;
+  font-size: 15px;
+}
+
+#login {
+  color: #FF7A59;
+  background-color: white;
+  border-radius: 5px;
+  border-color: #FF7A59;
+  padding:7px 12px;
+  margin: 0 10px;
+  border-style: solid;
+}
+
+
+#gethub {
+  color: white;
+  background-color: #FF7A59;
+  border-radius: 5px;
+  border:none;
+  padding:9px 12px;
+}
+
+/* HEADER SOTTO */
+.main-nav {
+  padding-top: 20px;
+  float: right;
+}
+
+#logo {
+  padding-top: 15px;
+  float: left;
+}
+
+ul li {
+  display: inline-block;
+}
+
+.select-nav {
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  padding: 0 10px;
+  font-weight: 700;
+}
+
+#pricing {
+  text-decoration: none;
+  color: #33475B;
+  padding: 0 15px;
+  font-size: 16px;
 }
 
 /* REGOLE MAIN */
