--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,8 @@ header .row::after {
   border: none;
   margin-right: 20px;
   color: #33475B;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 #contact {
@@ -136,11 +138,43 @@ ul li {
 
 /* Jumbo section */
 .jumbo {
+  background-color: #fff5ef;
   height: 700px;
-  /* debug */
-  background-color: purple;
+  background-image: url("../img/jumbotron.png");
+  background-position: right 0;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
+.text-jumbo h1 {
+  font-size: 60px;
+  padding-bottom: 30px;
+}
+.text-jumbo {
+width: 50%;
+position: relative;
+top: 70px;
+}
+
+
+.banner-bot {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 90px;
+  background-color:#81E0D4;
+  border: 3px solid #33475B;
+}
+
+#jumbo-button {
+  color: white;
+  background-color: #FF7A59;
+  border-radius: 5px;
+  border:none;
+  padding: 20px 20px;
+  font-size: 20px;
+  margin: 30px 0;
+}
 /* Background color delle sezioni  */
 
 .color-section {
