--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,14 @@ body {
 }
 
 /* REGOLE HEADER */
+header {
+  position: fixed;
+  width: 100%;
+  z-index: 50;
+  top: 0;
+}
+
+
 
 .header-top {
   height: 70px;
@@ -73,7 +81,9 @@ header .row::after {
   background-color: transparent;
   border: none;
 }
-
+.searchtext:focus {
+  visibility: visible;
+}
 .searchbar:hover .searchtext{
   visibility: visible;
 }
@@ -93,8 +103,13 @@ header .row::after {
   padding:7px 12px;
   margin: 0 10px;
   border-style: solid;
+  transition: 0.3s
 }
 
+#login:hover {
+  opacity: 0.9;
+  background-color: rgb(240,240,240);
+}
 
 #gethub {
   color: white;
@@ -102,6 +117,11 @@ header .row::after {
   border-radius: 5px;
   border:none;
   padding:9px 12px;
+  transition: 0.3s
+}
+
+#gethub:hover,#jumbo-button:hover {
+  opacity: 0.5;
 }
 
 /* HEADER SOTTO */
@@ -144,10 +164,11 @@ ul li {
   background-position: right 0;
   background-repeat: no-repeat;
   position: relative;
+  margin-top: 140px;
 }
 
 .text-jumbo h1 {
-  font-size: 60px;
+  font-size: 55px;
   padding-bottom: 30px;
 }
 .text-jumbo {
@@ -174,18 +195,29 @@ top: 70px;
   padding: 20px 20px;
   font-size: 20px;
   margin: 30px 0;
+  transition: 0.3s
 }
 /* Background color delle sezioni  */
 
 .color-section {
-  background-color: lightblue;
+  background-color: rgb(240, 250, 250);
 }
 /* rubik section */
 .rubik-box {
-  height: 350px;
-  /* debug */
-
+  text-align: center;
+  width: 60%;
+  margin: auto;
 }
+
+.rubik-box p{
+  margin: 30px 0;
+}
+.rubik-box img {
+  margin-top: 40px;
+  height: 180px;
+}
+
+
 /* section prima row */
 .row-uno::after{
   content: "";
