--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ header .row::after {
   font-size: 16px;
   padding: 0 10px;
   font-weight: 700;
+  color: #33475B;
 }
 
 #pricing {
@@ -358,7 +359,8 @@ top: 70px;
 /* section terza row */
 
 .row-tre {
-  background-color: green;
+  color: white;
+  background-image: linear-gradient(45deg,#00a4bd,#00bda5);
 }
 
 .row-tre::after{
@@ -367,93 +369,63 @@ top: 70px;
   clear: both;
 }
 
-.row-tre .text-section {
-  height: 200px;
-  /* debug */
-  background-color: green;
+.table-section {
+  padding-bottom: 500px;
 }
 
-.row-tre .table-section {
-  height: 500px;
+.table-section h2 {
+  padding: 35px 0;
+  text-align: center;
+  width: 65%;
+  margin: auto;
 }
 
-.row-tre .first {
+.table-section p {
+  padding-bottom: 60px;
+  text-align: center;
+  width: 90%;
+  margin: auto;
+}
+
+.table-section h3 {
+  font-size: 50px;
+  margin: 25px 0;
+}
+
+.image-row-tre {
+  padding-top: 20px;
+}
+
+.row-tre .border-bot-right {
   float: left;
   height: 200px;
   width: 25%;
-  /* debug */
-  background-color: green;
+  text-align: center;
   border-right: 1px solid white;
   border-bottom: 1px solid white;
 }
 
-.row-tre .second {
+.row-tre .border-bottom {
   float: left;
+  text-align: center;
   height: 200px;
   width: 25%;
-  /* debug */
-  background-color: green;
-  border-right: 1px solid white;
   border-bottom: 1px solid white;
 }
 
-.row-tre .third {
+.row-tre .border-right {
   float: left;
+  text-align: center;
   height: 200px;
   width: 25%;
-  /* debug */
-  background-color: green;
-  border-right: 1px solid white;
-  border-bottom: 1px solid white;
-}
-
-.row-tre .forth {
-  float: left;
-  height: 200px;
-  width: 25%;
-  /* debug */
-  background-color: green;
-  border-bottom: 1px solid white;
-}
-
-
-
-.row-tre .fifth {
-  float: left;
-  height: 200px;
-  width: 25%;
-  /* debug */
-  background-color: green;
   border-right: 1px solid white;
 }
 
-
-.row-tre .sixth {
+.row-tre .no-border {
   float: left;
+  text-align: center;
   height: 200px;
   width: 25%;
-  /* debug */
-  background-color: green;
-  border-right: 1px solid white;
-}
-
-
-.row-tre .seventh {
-  float: left;
-  height: 200px;
-  width: 25%;
-  /* debug */
-  background-color: green;
-  border-right: 1px solid white;
-}
-
-
-.row-tre .eight {
-  float: left;
-  height: 200px;
-  width: 25%;
-  /* debug */
-  background-color: green;
 }
 
 /* section quarta row */
