--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,11 @@ top: 70px;
   clear: both;
 }
 
+.row-uno {
+  box-shadow: 1px 1px 5px 1px lightgrey;
+  border-radius: 5px;
+}
+
 .row-uno .leftbox-row-uno{
   height: 350px;
   width: 35%;
@@ -233,8 +238,8 @@ top: 70px;
   background-color: white;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  box-shadow: 1px 1px 5px 1px lightgrey;
 }
+
 
 .row-uno .rightbox-row-uno {
   height: 350px;
@@ -243,8 +248,8 @@ top: 70px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   background-color: white;
-  box-shadow: 1px 1px 5px 1px lightgrey;
 }
+
 
 
 .image-inside-box {
@@ -302,6 +307,7 @@ top: 70px;
   float: left;
   background-color: white;
   box-shadow: 1px 1px 5px 1px lightgrey;
+  border-radius: 5px;
 }
 
 
@@ -312,6 +318,7 @@ top: 70px;
   margin: 0 5%;
   background-color: white;
   box-shadow: 1px 1px 5px 1px lightgrey;
+  border-radius: 5px;
 }
 
 
@@ -321,7 +328,7 @@ top: 70px;
   float: left;
   background-color: white;
   box-shadow: 1px 1px 5px 1px lightgrey;
-
+  border-radius: 5px;
 }
 
 .images-row-2 {
@@ -437,8 +444,22 @@ top: 70px;
 
 .row-quattro{
   /* debug */
-  background-color: lightgrey;
   height: 700px;
+}
+
+/* SEZIONE TOP ROW 4 */
+.left-row-quattro h2 {
+  font-size: 50px;
+}
+
+
+.left-row-quattro p{
+  margin: 20px 0;
+}
+
+.right-row-quattro img {
+  margin-top: 30px;
+  margin-right: 20px;
 }
 
 .row-quattro .section-top {
@@ -446,44 +467,93 @@ top: 70px;
   margin-bottom: 40px;
 }
 
-.section-top .left {
+.section-top .left-row-quattro {
   width: 30%;
   float: left;
-  /* debug */
   height: 225px;
-  background-color: blue;
+  text-align: center;
 }
 
 
-.section-top .right {
+.section-top .right-row-quattro {
   width: 70%;
   float: left;
-  /* debug */
   height: 225px;
-  background-color: red;
+  padding-left: 100px;
+  vertical-align: middle;
 }
 
 
+.atlassian-doordash {
+  height: 20px;
+  width: auto;
+  max-width: 20%;
+  vertical-align: middle;
+}
+
+.g2crowd-purple{
+  height: 30px;
+  width: auto;
+  max-width: 20%;
+  vertical-align: middle;
+}
+
+.classpass {
+  height: 40px;
+  width: auto;
+  max-width: 20%;
+  vertical-align: middle;
+  padding: 0 10px;
+}
+
+.subaru {
+  height: 40px;
+  width: auto;
+  max-width: 20%;
+  vertical-align: middle;
+  padding-right: 20px;
+}
+.vmware-wistia {
+  height: 20px;
+  width: auto;
+  max-width: 20%;
+  vertical-align: middle;
+}
+/* SEZIONE BOTTOM ROW QUATTRO */
 .section-bot .left {
-  width: 30%;
+  width: 43%;
   float: left;
-  /* debug */
-  height: 350px;
-  background-color: green;
+  padding-top: 40px;
 }
 
-.section-bot .right {
-  width: 70%;
-  float: left;
-  /* debug */
-  height: 350px;
-  background-color: purple;
+.section-bot p {
+  margin: 25px 0;
 }
+
+.section-bot h2 {
+  font-size: 34px;
+}
+.section-bot .right {
+  width: 50%;
+  float: left;
+  padding-top: 40px;
+  position: relative;
+}
+
+
+#woman {
+  height: 350px;
+  width: auto;
+  position: absolute;
+  right: 0;
+}
+
 /* REGOLE FOOTER */
+
 
 footer {
   height: 700px;
-  background-color: blue;
+  background-color:#32495b;;
 }
 
 .row-cinque::after{
