--- a/css/main.css
+++ b/css/main.css
@@ -553,7 +553,7 @@ top: 70px;
 
 footer {
   height: 700px;
-  background-color:#32495b;;
+  background-color:#32495b;
 }
 
 .row-cinque::after{
@@ -565,7 +565,73 @@ footer {
 .row-cinque .footer-block {
   width: 25%;
   float: left;
-  /* debug */
-  height: 450px;
-  background-color: red;
+  color: white;
+}
+
+.footer-block .ul-footer1 {
+  list-style-type: none;
+}
+
+.footer-block h3 {
+  margin: 40px 0;
+}
+
+.ul-footer1 li {
+  margin: 15px 0;
+}
+
+.ul-footer1 a {
+  color: lightgrey;
+  text-decoration: none;
+  font-weight: 100;
+}
+
+#footer-button {
+  background-color: lightgrey;
+  color: #32495b;
+  border-radius: 5px;
+  padding: 10px 10px;
+  border: none;
+  font-size: 15px;
+}
+
+.ul-footer2 li {
+  padding-right: 30px;
+  display: inline-block;
+}
+
+.language-list {
+  text-align: center;
+  padding: 30px 0;
+}
+
+.language-list li {
+  padding-right: 30px;
+  display: inline-block;
+}
+
+.finale a {
+  color: lightgrey;
+  text-decoration: none;
+  font-weight: 100;
+}
+
+.finale hr {
+  border: 1px solid lightgrey;
+}
+
+.footer-float-sx {
+  float: left;
+  padding-top: 25px;
+}
+
+.footer-float-dx {
+  float: right;
+  padding-top: 25px;
+}
+
+.footer-float-sx p {
+  color: lightgrey;
+  text-decoration: none;
+  font-weight: 100;
 }
