--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,6 @@ header {
   top: 0;
 }
 
-
-
 .header-top {
   height: 70px;
   background-color: rgb(240, 250, 250);
@@ -44,20 +42,15 @@ header .row::after {
   display: table;
   clear: both;
 }
+
+
 /* FLOAT LEFT HEADER TOP */
 .header-top .float-left {
   padding-top: 20px;
   float: left;
 }
 
-.lingua {
-  background-color: transparent;
-  border: none;
-  margin-right: 20px;
-  color: #33475B;
-  font-weight: 700;
-  font-size: 16px;
-}
+
 
 #contact {
   padding-left: 20px;
@@ -75,15 +68,18 @@ header .row::after {
 .searchbar {
   display: inline-block;
 }
+
 .searchtext {
   height: 30px;
   visibility: hidden;
   background-color: transparent;
   border: none;
 }
+
 .searchtext:focus {
   visibility: visible;
 }
+
 .searchbar:hover .searchtext{
   visibility: visible;
 }
@@ -148,11 +144,20 @@ header .row::after {
   color: #33475B;
 }
 
-#pricing {
+.links {
   text-decoration: none;
   color: #33475B;
-  padding: 0 15px;
+  padding-right: 25px;
   font-size: 16px;
+}
+
+header i {
+  padding: 0 8px;
+}
+
+.links:hover,#contact:hover {
+  text-decoration: underline;
+  color: rgb(77, 210, 255);
 }
 
 /* REGOLE MAIN */
@@ -172,10 +177,11 @@ header .row::after {
   font-size: 55px;
   padding-bottom: 30px;
 }
+
 .text-jumbo {
-width: 50%;
-position: relative;
-top: 70px;
+  width: 50%;
+  position: relative;
+  top: 70px;
 }
 
 
@@ -185,7 +191,8 @@ top: 70px;
   width: 100%;
   height: 90px;
   background-color:#81E0D4;
-  border: 3px solid #33475B;
+  border-top: 3px solid #33475B;
+  border-bottom: 3px solid #33475B;
 }
 
 .orange-button {
@@ -284,7 +291,7 @@ top: 70px;
   margin-right: 30px;
 }
 
-.ul-line i {
+.row-uno i {
   color: #FF7A59;
   margin-right: 15px;
 }
@@ -527,7 +534,7 @@ top: 70px;
 }
 
 .section-bot p {
-  margin: 25px 0;
+  margin: 20px 0;
 }
 
 .section-bot h2 {
@@ -540,13 +547,13 @@ top: 70px;
   position: relative;
 }
 
-
 #woman {
   height: 350px;
   width: auto;
   position: absolute;
   right: 0;
 }
+
 
 /* REGOLE FOOTER */
 
@@ -580,10 +587,15 @@ footer {
   margin: 15px 0;
 }
 
-.ul-footer1 a {
+footer a {
   color: lightgrey;
   text-decoration: none;
   font-weight: 100;
+}
+
+footer a:hover {
+  color: rgb(77, 210, 255);
+  text-decoration: underline;
 }
 
 #footer-button {
@@ -610,12 +622,6 @@ footer {
   display: inline-block;
 }
 
-.finale a {
-  color: lightgrey;
-  text-decoration: none;
-  font-weight: 100;
-}
-
 .finale hr {
   border: 1px solid lightgrey;
 }
@@ -630,8 +636,65 @@ footer {
   padding-top: 25px;
 }
 
+.footer-float-dx a {
+  padding-right: 20px;
+}
+
 .footer-float-sx p {
   color: lightgrey;
   text-decoration: none;
   font-weight: 100;
+}
+
+.chat-fixed {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 10px;
+  border-radius: 50%;
+  background-color: rgb(112, 148, 219);
+}
+
+.chat-fixed i {
+  font-size: 50px;
+  color: white;
+}
+
+.chat-fixed:hover .chat-text {
+  display: block;
+}
+
+.chat-text {
+  height: 400px;
+  width: 300px;
+  background-color: white;
+  position: fixed;
+  bottom: 120px;
+  right: 20px;
+  box-shadow: 1px 1px 5px 1px lightgrey;
+  border-radius: 5px;
+  display: none;
+}
+
+#logo-bot {
+  height: 50px;
+  width: auto;
+  vertical-align: middle;
+  margin:  10px 10px;
+}
+
+.chat-text h3 {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.chat-text p{
+  background-color: lightblue;
+  padding: 15px 15px;
+  margin: 20px 20px;
+  border-radius: 5px;
+}
+
+#risposta-utente {
+  background-color: lightyellow;
 }
